# recap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.bat
.github/workflows/: tests.yml
backend/: __init__.py  app.py  bootstrap.py  config.py  embeddings.py  models.py  prompts.py
backend/ingestion/: __init__.py  chunker.py  content_classifier.py  entity_extractor.py  processor.py  semantic_gate.py
backend/retrieval/: __init__.py  answer_generator.py  hybrid_retriever.py  reranker.py
backend/storage/: __init__.py  database.py  knowledge_graph.py  vector_store.py
backend/utils/: __init__.py
extension/: background.js  content.js  digest.html  digest.js  flashcards.html  flashcards.js  graph.html  graph.js  manifest.json  newtab.css  newtab.html  newtab.js  onboarding.html  onboarding.js  options.html  options.js  popup.html  popup.js  theme.css
extension/lib/: LICENSES.md
tests/: test_integration.py
